# talktosc

./: .gitignore  Cargo.toml  README.md
data/: 6e_information_for_25519.binary  aid.binary  capabilities_tlv.binary  foo2.binary  name.binary
src/: apdus.rs  errors.rs  lib.rs  main.rs  response.rs  tlvs.rs
