[package]
name = "talktosc"
version = "0.1.2"
authors = ["Kushal Das <mail@kushaldas.in>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/kushaldas/talktosc"
description = "Library to talk to smartcards for OpenPGP operations."
exclude=["data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
pcsc = "2.7.0"
thiserror = "1.0"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
